[package]
name = "looker"
version = "0.1.0"
authors = ["Neil Ashford <ashfordneil0@gmail.com>"]
edition = "2018"

[dependencies]
tantivy = "0.9.1"
env_logger = "0.6.1"
structopt = "0.2.15"
failure = "0.1.5"
lazy_static = "1.3.0"
ignore = "0.4.6"
log = "0.4.6"
regex = "1.1.5"
termion = "1.5.1"
itertools = "0.8.0"
